<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rellayLobby"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@drawable/grad_bg"
    tools:context=".LobbyActivity">

    <RelativeLayout
        android:id="@+id/rellayGeneral"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="165dp"
            android:layout_height="175dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/w" />

        <RelativeLayout
            android:id="@+id/rellayLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView_logo"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_appName"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/inUserName"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="40dp"
                    android:autofillHints=""
                    android:background="@drawable/in_bg"
                    android:fontFamily="sans-serif-medium"
                    android:hint="@string/Input_UserName"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="15sp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/linlay1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/bt_bg"
                android:clickable="true"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/Button_LoginUser"
                android:textAllCaps="false"
                android:textColor="@color/gradStart"
                android:textSize="20sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rellaySelectMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgView_logo"
            android:visibility="gone">

            <TextView
                android:id="@+id/tv_appName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/linlaymatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_appName2"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/inNameMatch"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="40dp"
                        android:autofillHints=""
                        android:background="@drawable/in_bg"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/Input_NameMatch"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/inPassMatch"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginLeft="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="40dp"
                        android:autofillHints=""
                        android:background="@drawable/in_bg"
                        android:fontFamily="sans-serif-medium"
                        android:hint="@string/Input_PassMatch"
                        android:inputType="textPassword"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btnCreateMatch"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@id/linlaymatch"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/bt_bg"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/Button_CreateMatch"
                android:textAllCaps="false"
                android:textColor="@color/gradStart"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnJoinMatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnCreateMatch"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="80dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/bt_bg"
                android:clickable="true"
                android:fontFamily="sans-serif-condensed-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="@string/Button_JoinMatch"
                android:textAllCaps="false"
                android:textColor="@color/gradStart"
                android:textSize="20sp" />
        </RelativeLayout>


    </RelativeLayout>



</RelativeLayout>